# Projeto-Nvidia

./: .env.example  .gitignore  MELHORIAS.md  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/: api.py  batch.py  briefing.py  classifier.py  config.py  db.py  discovery.py  eval_rag.py  evidence_validator.py  extractor.py  graph.py  ingest.py  llm.py  nvidia_rag.py  rag.py  recommendation.py  score.py  scraper.py  search_planner.py  sources.py  state.py  ui.py
tests/: test_batch.py  test_briefing.py  test_classifier.py  test_db.py  test_discovery.py  test_eval_rag.py  test_evidence_validator.py  test_extractor.py  test_graph.py  test_nvidia_rag.py  test_rag.py  test_recommendation.py  test_routing.py  test_score.py  test_scraper.py  test_search_planner.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: ConstellationBg.tsx  Navbar.tsx  Reveal.tsx  SearchBox.tsx
web/app/radar/: GraficoRadar.tsx  TabsRadar.tsx  layout.tsx  page.tsx
web/app/radar/[nome]/: BaixarBriefing.tsx  Colapsavel.tsx  page.tsx
web/app/radar/descoberta/: page.tsx
