[project]
name = "nvidia-startup-radar"
version = "0.0.0"
description = "NVIDIA Startup AI Radar — pipeline multiagente em LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2",
    "langchain-core>=1.4",
    "langchain-openai>=1.3",
    "langchain-nvidia-ai-endpoints>=1.4",
    "langchain-google-genai>=2.0",
    "openai>=2.43",
    "cohere>=7.0",
    "qdrant-client[fastembed]>=1.12",
    "trafilatura>=2.1",
    "beautifulsoup4>=4.15",
    "ddgs>=9.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.3",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "python-dotenv>=1.0",
    "streamlit>=1.58",
    "uvicorn>=0.49",
    "fastapi>=0.139",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
